--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "nodeJS store MVC",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "nodeJS store MVC",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
